# Build26-BRK243-claw-and-agent-harness-in-microsoft-foundry

./: .gitignore  README.md
src/: README.zh-TW.md
src/Agent-Harness/ConsoleReactiveComponents/: AnsiEscapes.cs  ListSelection.cs  TextInput.cs  TextPanel.cs  TextScrollPanel.cs  TopBottomRule.cs
src/Agent-Harness/ConsoleReactiveFramework/: ConsoleReactiveComponent.cs  ConsoleReactiveMemo.cs  ConsoleResizeListener.cs  KeyEventListener.cs
src/Agent-Harness/Harness_Shared_Console/: FileSpanExporter.cs  FollowUpAction.cs  HarnessAgentRunner.cs  HarnessAppComponent.cs  HarnessAppComponentState.cs  HarnessConsole.cs  HarnessConsoleOptions.cs  HarnessConsoleUXStateDriver.cs  HarnessTracing.cs  IUXStateDriver.cs  ModeColors.cs  OutputEntry.cs
src/Agent-Harness/Harness_Shared_Console_OpenAI/: OpenAIResponsesErrorObserver.cs  OpenAIResponsesWebSearchDisplayObserver.cs
src/Agent-Harness/Harness_Step01_Research/: DownloadUriToolFormatter.cs  Program.cs  WebBrowsingTool.cs  WebBrowsingToolOptions.cs
src/Agent-Harness/Harness_Step02_Research_WithBackgroundAgents/: Program.cs
src/Agent-Harness/Harness_Step03_DataProcessing/: Program.cs
src/Hermes-Foundry-Simple/: README.md  conftest.py  requirements.txt
src/foundry-hermes-qa-agent/: .dockerignore  Dockerfile  README.md  agent.yaml  azure.yaml  pyproject.toml
src/foundry-hermes-qa-agent/src/foundry_hermes_qa_agent/: __init__.py  __main__.py  app.py  chat_service.py  errors.py  handlers.py  models.py  settings.py
src/foundry-hermes-qa-agent/tests/: test_chat_service.py  test_handlers.py  test_models.py
(+53 files in other folders)
