[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "foundry-hermes-qa-agent"
version = "0.1.0"
description = "Microsoft Foundry Hosted Agent (Invocations Protocol):接收 hermes.rpc prompt.submit,呼叫 Azure OpenAI 回答,可用 web_search 工具搜尋網路"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-agentserver-core==2.0.0b5",
    "azure-ai-agentserver-invocations==1.0.0b4",
    "azure-identity>=1.25",
    "openai>=2.41,<3",
    "starlette>=0.40",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "respx>=0.22",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
